<resources>
    <string name="app_name">ChatApp</string>
    <string name="messager">Messager</string>
    <string name="username_email">" Email Address"</string>
    <string name="password">" Password"</string>
    <string name="login">Login</string>
    <string name="or">— OR —</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="log_out">Log Out</string>
    <string name="type_a_message">Type a message</string>
</resources>